# TelegramRe

./: .editorconfig  .pre-commit-config.yaml  README.md  docker-compose.yaml  dump.rdb  package-lock.json  package.json  pyrightconfig.json
backend/: .dockerignore  .env.example  Dockerfile  Makefile  docker-entrypoint.sh  dump.rdb  pyproject.toml  requirements.txt
backend/django_core/: manage.py
backend/django_core/apps/api/: serializers.py  tests.py  urls.py  views.py
backend/django_core/apps/api/views/: auth.py  chat.py  user.py
backend/django_core/apps/chat/: admin.py  consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
backend/django_core/apps/chat/migrations/: 0001_initial.py  0002_chatroom_created_at_alter_chatroom_type.py  0002_remove_chatmessage_user.py  0003_alter_chatmessage_options_and_more.py  0003_chatroom_chatmsg.py  0004_rename_member_chatroom_members_alter_chatroom_id.py  0004_rename_user_chatroom_member.py  0005_chatroom_avatar_chatroom_is_verified_and_more.py  0005_rename_message_chatmsg_content_alter_chatmsg_room.py  0006_chatmsg_is_read.py  0006_chatroom_bio_alter_chatroom_id.py  0007_alter_chatmessage_options_and_more.py  0007_chatroom_color_alter_chatroom_id.py  0008_alter_chatroom_id.py  0008_rename_user_chatmessage_sender.py  0009_alter_chatmessage_options_alter_chatroom_id.py  0009_chatmessage_file_alter_chatmessage_content.py  0010_chatmessage_type.py  0011_alter_chatmessage_type.py  0012_alter_chatmessage_type.py  0013_alter_chatmessage_type.py  0014_chatmessage_edited.py
backend/django_core/apps/user/: admin.py  backends.py  forms.py  managers.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
backend/django_core/apps/user/migrations/: 0001_initial.py  0002_alter_customuser_username.py  0002_customuser_is_verified.py  0003_alter_customuser_username.py  0003_remove_customuser_is_verified.py  0004_customuser_color.py  0004_customuser_is_verified.py  (+11 more)
backend/django_core/core/: asgi.py  settings.py  urls.py
backend/django_core/mixins/models/: created_at.py  uuid.py
backend/django_core/templates/email/: otp_template.html
backend/django_core/user/: admin.py  models.py  signals.py
backend/django_core/user/migrations/: 0001_initial.py  0003_remove_customuser_is_verified.py  0005_alter_customuser_avatar.py
backend/django_core/utilities/: get_color.py  numeric_uuid.py
(+329 files in other folders)
