[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["tokitou-san <tokitousan2005@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
psycopg = "^3.1.18"
pillow = "^10.2.0"
django-dynamic-filenames = "^1.3.2"
django-cleanup = "^8.1.0"
python-dotenv = "^1.0.1"
black = "^24.2.0"
djangorestframework = "^3.14.0"
markdown = "^3.5.2"
django-filter = "^23.5"
django-stubs-ext = "^4.2.7"
django-cors-headers = "^4.3.1"
channels = {extras = ["daphne"], version = "^4.0.0"}
django-shortuuidfield = "^0.1.3"
channels-redis = "^4.2.0"
django-cloudinary-storage = "^0.3.0"
cloudinary = "^1.39.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
