[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["tokitou-san <tokitousan2005@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
psycopg = "^3.1.18"
pillow = "^10.3.0"
django-dynamic-filenames = "^1.3.2"
django-cleanup = "^8.1.0"
python-dotenv = "^1.0.1"
black = "^24.4.0"
djangorestframework = "^3.15.0"
markdown = "^3.6"
django-filter = "^24.2"
django-stubs-ext = "^4.2.7"
django-cors-headers = "^4.3.1"
channels = {extras = ["daphne"], version = "^4.1.0"}
django-shortuuidfield = "^0.1.3"
channels-redis = "^4.2.0"
django-cloudinary-storage = "^0.3.0"
cloudinary = "^1.40.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
