[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["tokitou-san <tokitousan2005@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1"
psycopg = "^3.2.3"
pillow = "^10.4.0"
django-dynamic-filenames = "^1.3.2"
django-cleanup = "^9.0.0"
python-dotenv = "^1.0.1"
black = "^24.8.0"
djangorestframework = "^3.15.2"
markdown = "^3.7"
django-filter = "^24.3"
django-cors-headers = "^4.4.0"
channels = {extras = ["daphne"], version = "^4.1.0"}
channels-redis = "^4.2.0"
django-cloudinary-storage = "^0.3.0"
cloudinary = "^1.41.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
